@@ -23,8 +23,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -175,7 +176,7 @@
         <dependency>
             <groupId>net.william278</groupId>
             <artifactId>huskhomes</artifactId>
-            <version>4.4.4</version>
+            <version>4.5.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
